<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eufs_rviz_plugins</name>
  <version>0.0.0</version>
  <description>RViz plugins specific to EUFS.</description>
  <maintainer email="keaneq@protonmail.com">Keane Quigley</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eufs_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
